# dotfiles

./: .bash_profile  .bashrc  .chezmoi.json.tpml  .chezmoi.toml.tmpl  .chezmoi.yaml.tmpl  .chezmoiignore  .dockerignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .zprofile  .zshrc  AGENTS.md  Brewfile  Dockerfile  LICENSE  README.md  TESTING_GLOW_STYLES.md  TODO.md  bootstrap  bootstrap.sh  dot_bash_aliases  dot_bash_exports  dot_bash_profile  dot_bashrc  dot_vimrc  install.sh  key.txt.age  pyproject.toml  settings.json  setup  setup-refactor  setup-rewrite  setup.sh
.chezmoiscripts/: run_install_homebrew_packages.sh  run_once_before_install-fonts.sh.tmpl  run_once_install-non-homebrew-packages.sh
.config/: init.lua
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  SUPPORT.md  dependabot.yml  stale.yml
.ssh/: config
Starship/: README.md
Windows/: Install-Font.ps1  Install-Software.ps1  README.md  install.ps1  sync.ps1
Windows 10/: README.md
bash/: .aliases  .bash_profile  .bashrc  .bashrc_temporary  .exports  .functions  .hushlogin
dotfiles/: .Brewfile  .bash_profile  .bashrc  .zprofile  .zshenv  .zshrc  dot_bash_aliases  dot_bash_exports  dot_bash_exports.tmpl  dot_bash_functions  dot_bash_profile  dot_bashrc  dot_cobra.yaml.tmpl  dot_tool-versions  dot_zshrc  encrypted_dot_bash_secrets.age  private_dot_npmrc.tmpl
git/: .gitconfig  .gitignore
misc/: Brewfile  docker-installer  inkscape-installer  install-lsp-servers  kitty-terminal-installer  lvim-installer  msft-edge-installer  persepolis-installer  (+8 more)
(+333 files in other folders)
