[tool.poetry]
name = "-dotfiles"
license = "GPL 3.0"
packages = [{include = "dotfiles"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ruff = "^0.0.275"
mypy = "^1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["D", "E", "F", "I", "RUF"]
ignore = ["D211", "D212"]
extend-exclude = ["__init__.py"]

[tool.mypy]
ignore_missing_imports = true
